--- a/src/main/webapp/customermaster/List.xhtml
+++ b/src/main/webapp/customermaster/List.xhtml
@@ -3,122 +3,88 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListCustomermasterTitle}"></h:outputText>
+            <h:outputText value="#{bundle.ListCustomermasterTitle}" />
         </ui:define>
         <ui:define name="body">
             <h:form styleClass="jsfcrud_list_form">
                 <h:panelGroup id="messagePanel" layout="block">
                     <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                 </h:panelGroup>
-                <h:outputText escape="false" value="#{bundle.ListCustomermasterEmpty}" rendered="#{customermasterController.items.rowCount == 0}"/>
+                <p:outputLabel escape="false" value="#{bundle.ListCustomermasterEmpty}" rendered="#{customermasterController.items.rowCount == 0}"/>
                 <h:panelGroup rendered="#{customermasterController.items.rowCount > 0}">
-                    <h:outputText value="#{customermasterController.pagination.pageFirstItem + 1}..#{customermasterController.pagination.pageLastItem + 1}/#{customermasterController.pagination.itemsCount}"/>&nbsp;
+                    <p:outputLabel value="#{customermasterController.pagination.pageFirstItem + 1}..#{customermasterController.pagination.pageLastItem + 1}/#{customermasterController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{customermasterController.previous}" value="#{bundle.Previous} #{customermasterController.pagination.pageSize}" rendered="#{customermasterController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{customermasterController.next}" value="#{bundle.Next} #{customermasterController.pagination.pageSize}" rendered="#{customermasterController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{customermasterController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
+                    <p:dataTable value="#{customermasterController.items}" var="item"
+                                 resizableColumns="true" liveResize="false"
+                                 paginator="false"
+                                 rowKey="#{item.id}"
+                                 rows="#{customermasterController.pagination.pageSize}"
+                                 >
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_id}"/>
+                                <p:outputLabel value="#{bundle.L氏名}"/>
                             </f:facet>
-                            <h:outputText value="#{item.id}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.fullname}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_recorddate}"/>
+                                <p:outputLabel value="#{bundle.Lふりがな}"/>
                             </f:facet>
-                            <h:outputText value="#{item.recorddate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                            </h:outputText>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.ruby}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_recordprogram}"/>
+                                <p:outputLabel value="#{bundle.L性別}"/>
                             </f:facet>
-                            <h:outputText value="#{item.recordprogram}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.sex}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_recorduserid}"/>
+                                <p:outputLabel value="#{bundle.L郵便番号}"/>
                             </f:facet>
-                            <h:outputText value="#{item.recorduserid}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.zip}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_recordvalid}"/>
+                                <p:outputLabel value="#{bundle.L住所}"/>
                             </f:facet>
-                            <h:outputText value="#{item.recordvalid}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.address}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_fullname}"/>
+                                <p:outputLabel value="#{bundle.L電話番号1}"/>
                             </f:facet>
-                            <h:outputText value="#{item.fullname}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.phonenumber1}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_ruby}"/>
+                                <p:outputLabel value="#{bundle.L電話番号2}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ruby}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.phonenumber2}"/>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_sex}"/>
+                                <p:outputLabel value="#{bundle.L生年月日}"/>
                             </f:facet>
-                            <h:outputText value="#{item.sex}"/>
-                        </h:column>
-                        <h:column>
+                            <p:outputLabel value="#{item.birthday}">
+                                <f:convertDateTime pattern="yyyy/MM/dd" />
+                            </p:outputLabel>
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_zip}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.zip}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_address}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.address}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_phonenumber1}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.phonenumber1}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_phonenumber2}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.phonenumber2}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_birthday}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.birthday}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                            </h:outputText>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCustomermasterTitle_customerinformationid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.customerinformationid}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
+                                <p:outputLabel value="&nbsp;"/>
                             </f:facet>
                             <h:commandLink action="#{customermasterController.prepareView}" value="#{bundle.ListCustomermasterViewLink}"/>
-                            <h:outputText value=" "/>
+                            <p:outputLabel value=" "/>
                             <h:commandLink action="#{customermasterController.prepareEdit}" value="#{bundle.ListCustomermasterEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{customermasterController.destroy}" value="#{bundle.ListCustomermasterDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
+                        </p:column>
+                        </p:dataTable>
                 </h:panelGroup>
                 <br />
                 <h:commandLink action="#{customermasterController.prepareCreate}" value="#{bundle.ListCustomermasterCreateLink}"/>
