--- a/src/main/webapp/customermaster/View.xhtml
+++ b/src/main/webapp/customermaster/View.xhtml
@@ -3,11 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ViewCustomermasterTitle}"></h:outputText>
+            <h:outputText value="#{bundle.ViewCustomermasterTitle}" />
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
@@ -15,41 +16,25 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_id}"/>
-                    <h:outputText value="#{customermasterController.selected.id}" title="#{bundle.ViewCustomermasterTitle_id}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_recorddate}"/>
-                    <h:outputText value="#{customermasterController.selected.recorddate}" title="#{bundle.ViewCustomermasterTitle_recorddate}">
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:outputText>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_recordprogram}"/>
-                    <h:outputText value="#{customermasterController.selected.recordprogram}" title="#{bundle.ViewCustomermasterTitle_recordprogram}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_recorduserid}"/>
-                    <h:outputText value="#{customermasterController.selected.recorduserid}" title="#{bundle.ViewCustomermasterTitle_recorduserid}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_recordvalid}"/>
-                    <h:outputText value="#{customermasterController.selected.recordvalid}" title="#{bundle.ViewCustomermasterTitle_recordvalid}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_fullname}"/>
-                    <h:outputText value="#{customermasterController.selected.fullname}" title="#{bundle.ViewCustomermasterTitle_fullname}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_ruby}"/>
-                    <h:outputText value="#{customermasterController.selected.ruby}" title="#{bundle.ViewCustomermasterTitle_ruby}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_sex}"/>
-                    <h:outputText value="#{customermasterController.selected.sex}" title="#{bundle.ViewCustomermasterTitle_sex}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_zip}"/>
-                    <h:outputText value="#{customermasterController.selected.zip}" title="#{bundle.ViewCustomermasterTitle_zip}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_address}"/>
-                    <h:outputText value="#{customermasterController.selected.address}" title="#{bundle.ViewCustomermasterTitle_address}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_phonenumber1}"/>
-                    <h:outputText value="#{customermasterController.selected.phonenumber1}" title="#{bundle.ViewCustomermasterTitle_phonenumber1}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_phonenumber2}"/>
-                    <h:outputText value="#{customermasterController.selected.phonenumber2}" title="#{bundle.ViewCustomermasterTitle_phonenumber2}"/>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_birthday}"/>
-                    <h:outputText value="#{customermasterController.selected.birthday}" title="#{bundle.ViewCustomermasterTitle_birthday}">
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:outputText>
-                    <h:outputText value="#{bundle.ViewCustomermasterLabel_customerinformationid}"/>
-                    <h:outputText value="#{customermasterController.selected.customerinformationid}" title="#{bundle.ViewCustomermasterTitle_customerinformationid}"/>
+                    <p:outputLabel value="#{bundle.L氏名}"/>
+                    <p:outputLabel value="#{customermasterController.selected.fullname}" title="#{bundle.ViewCustomermasterTitle_fullname}"/>
+                    <p:outputLabel value="#{bundle.Lふりがな}"/>
+                    <p:outputLabel value="#{customermasterController.selected.ruby}" title="#{bundle.ViewCustomermasterTitle_ruby}"/>
+                    <p:outputLabel value="#{bundle.L性別}"/>
+                    <p:outputLabel value="#{customermasterController.selected.sex}" title="#{bundle.ViewCustomermasterTitle_sex}"/>
+                    <p:outputLabel value="#{bundle.L郵便番号}"/>
+                    <p:outputLabel value="#{customermasterController.selected.zip}" title="#{bundle.ViewCustomermasterTitle_zip}"/>
+                    <p:outputLabel value="#{bundle.L住所}"/>
+                    <p:outputLabel value="#{customermasterController.selected.address}" title="#{bundle.ViewCustomermasterTitle_address}"/>
+                    <p:outputLabel value="#{bundle.L電話番号1}"/>
+                    <p:outputLabel value="#{customermasterController.selected.phonenumber1}" title="#{bundle.ViewCustomermasterTitle_phonenumber1}"/>
+                    <p:outputLabel value="#{bundle.L電話番号2}"/>
+                    <p:outputLabel value="#{customermasterController.selected.phonenumber2}" title="#{bundle.ViewCustomermasterTitle_phonenumber2}"/>
+                    <p:outputLabel value="#{bundle.L生年月日}"/>
+                    <p:outputLabel value="#{customermasterController.selected.birthday}" title="#{bundle.ViewCustomermasterTitle_birthday}">
+                        <f:convertDateTime pattern="yyyy/MM/dd" />
+                    </p:outputLabel>
                 </h:panelGrid>
-                <br />
-                <h:commandLink action="#{customermasterController.destroyAndView}" value="#{bundle.ViewCustomermasterDestroyLink}"/>
                 <br />
                 <br />
                 <h:link outcome="Edit" value="#{bundle.ViewCustomermasterEditLink}"/>
@@ -61,6 +46,117 @@
                 <br />
                 <h:link outcome="/index" value="#{bundle.ViewCustomermasterIndexLink}"/>
 
+                <h:panelGroup id="messagePanel" layout="block">
+                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                </h:panelGroup>
+                <p:outputLabel escape="false" value="#{bundle.ListTreatmentEmpty}" rendered="#{treatmentController.items.rowCount == 0}"/>
+                <h:panelGroup rendered="#{treatmentController.items.rowCount > 0}">
+                    <p:outputLabel value="#{treatmentController.pagination.pageFirstItem + 1}..#{treatmentController.pagination.pageLastItem + 1}/#{treatmentController.pagination.itemsCount}"/>&nbsp;
+                    <h:commandLink action="#{treatmentController.previous}" value="#{bundle.Previous} #{treatmentController.pagination.pageSize}" rendered="#{treatmentController.pagination.hasPreviousPage}"/>&nbsp;
+                    <h:commandLink action="#{treatmentController.next}" value="#{bundle.Next} #{treatmentController.pagination.pageSize}" rendered="#{treatmentController.pagination.hasNextPage}"/>&nbsp;
+                    <h:dataTable value="#{treatmentController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_id}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.id}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_recorddate}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.recorddate}">
+                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                            </p:outputLabel>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_recordprogram}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.recordprogram}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_recorduserid}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.recorduserid}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_recordvalid}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.recordvalid}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_customerid}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.customerid}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_treatmentdate}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.treatmentdate}">
+                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                            </p:outputLabel>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_chiefcomplaint}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.chiefcomplaint}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_examination}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.examination}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_treatment}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.treatment}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_treatmentresult}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.treatmentresult}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_attachedfile}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.attachedfile}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_attachedfilename}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.attachedfilename}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="#{bundle.ListTreatmentTitle_attachedfiledata}"/>
+                            </f:facet>
+                            <p:outputLabel value="#{item.attachedfiledata}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <p:outputLabel value="&nbsp;"/>
+                            </f:facet>
+                            <h:commandLink action="#{treatmentController.prepareView}" value="#{bundle.ListTreatmentViewLink}"/>
+                            <p:outputLabel value=" "/>
+                            <h:commandLink action="#{treatmentController.prepareEdit}" value="#{bundle.ListTreatmentEditLink}"/>
+                            <p:outputLabel value=" "/>
+                            <h:commandLink action="#{treatmentController.destroy}" value="#{bundle.ListTreatmentDestroyLink}"/>
+                        </h:column>
+                    </h:dataTable>
+                </h:panelGroup>
+                <br />
+                <h:commandLink action="#{treatmentController.prepareCreate}" value="#{bundle.ListTreatmentCreateLink}"/>
             </h:form>
         </ui:define>
     </ui:composition>
