--- a/src/main/webapp/treatment/Create.xhtml
+++ b/src/main/webapp/treatment/Create.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -15,37 +16,18 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{treatmentController.selected.id}" title="#{bundle.CreateTreatmentTitle_id}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_id}"/>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_recorddate}" for="recorddate" />
-                    <h:inputText id="recorddate" value="#{treatmentController.selected.recorddate}" title="#{bundle.CreateTreatmentTitle_recorddate}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_recorddate}">
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_recordprogram}" for="recordprogram" />
-                    <h:inputText id="recordprogram" value="#{treatmentController.selected.recordprogram}" title="#{bundle.CreateTreatmentTitle_recordprogram}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_recordprogram}"/>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_recorduserid}" for="recorduserid" />
-                    <h:inputText id="recorduserid" value="#{treatmentController.selected.recorduserid}" title="#{bundle.CreateTreatmentTitle_recorduserid}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_recorduserid}"/>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_recordvalid}" for="recordvalid" />
-                    <h:inputText id="recordvalid" value="#{treatmentController.selected.recordvalid}" title="#{bundle.CreateTreatmentTitle_recordvalid}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_recordvalid}"/>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_customerid}" for="customerid" />
-                    <h:inputText id="customerid" value="#{treatmentController.selected.customerid}" title="#{bundle.CreateTreatmentTitle_customerid}" required="true" requiredMessage="#{bundle.CreateTreatmentRequiredMessage_customerid}"/>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_treatmentdate}" for="treatmentdate" />
-                    <h:inputText id="treatmentdate" value="#{treatmentController.selected.treatmentdate}" title="#{bundle.CreateTreatmentTitle_treatmentdate}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:inputText>
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_chiefcomplaint}" for="chiefcomplaint" />
-                    <h:inputText id="chiefcomplaint" value="#{treatmentController.selected.chiefcomplaint}" title="#{bundle.CreateTreatmentTitle_chiefcomplaint}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_examination}" for="examination" />
-                    <h:inputText id="examination" value="#{treatmentController.selected.examination}" title="#{bundle.CreateTreatmentTitle_examination}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_treatment}" for="treatment" />
-                    <h:inputText id="treatment" value="#{treatmentController.selected.treatment}" title="#{bundle.CreateTreatmentTitle_treatment}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_treatmentresult}" for="treatmentresult" />
-                    <h:inputText id="treatmentresult" value="#{treatmentController.selected.treatmentresult}" title="#{bundle.CreateTreatmentTitle_treatmentresult}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_attachedfile}" for="attachedfile" />
-                    <h:inputText id="attachedfile" value="#{treatmentController.selected.attachedfile}" title="#{bundle.CreateTreatmentTitle_attachedfile}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_attachedfilename}" for="attachedfilename" />
-                    <h:inputText id="attachedfilename" value="#{treatmentController.selected.attachedfilename}" title="#{bundle.CreateTreatmentTitle_attachedfilename}" />
-                    <h:outputLabel value="#{bundle.CreateTreatmentLabel_attachedfiledata}" for="attachedfiledata" />
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_treatmentdate}" for="treatmentdate" />
+                    <p:calendar id="treatmentdate" pattern="yyyy/MM/dd" value="#{treatmentController.selected.treatmentdate}" title="#{bundle.CreateTreatmentTitle_treatmentdate}" >
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_chiefcomplaint}" for="chiefcomplaint" />
+                    <p:inputTextarea id="chiefcomplaint" value="#{treatmentController.selected.chiefcomplaint}" title="#{bundle.CreateTreatmentTitle_chiefcomplaint}" />
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_examination}" for="examination" />
+                    <p:inputTextarea id="examination" value="#{treatmentController.selected.examination}" title="#{bundle.CreateTreatmentTitle_examination}" />
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_treatment}" for="treatment" />
+                    <p:inputTextarea id="treatment" value="#{treatmentController.selected.treatment}" title="#{bundle.CreateTreatmentTitle_treatment}" />
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_treatmentresult}" for="treatmentresult" />
+                    <p:inputTextarea id="treatmentresult" value="#{treatmentController.selected.treatmentresult}" title="#{bundle.CreateTreatmentTitle_treatmentresult}" />
+                    <p:outputLabel value="#{bundle.CreateTreatmentLabel_attachedfile}" for="attachedfile" />
+                    <h:inputFile id="attachedfile" value="#{treatmentController.attachedFile}" title="#{bundle.CreateTreatmentTitle_attachedfile}" />
                     <h:inputTextarea rows="4" cols="30" id="attachedfiledata" value="#{treatmentController.selected.attachedfiledata}" title="#{bundle.CreateTreatmentTitle_attachedfiledata}" />
                 </h:panelGrid>
                 <br />
