--- a/src/main/webapp/treatment/List.xhtml
+++ b/src/main/webapp/treatment/List.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -19,51 +20,18 @@
                     <h:outputText value="#{treatmentController.pagination.pageFirstItem + 1}..#{treatmentController.pagination.pageLastItem + 1}/#{treatmentController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{treatmentController.previous}" value="#{bundle.Previous} #{treatmentController.pagination.pageSize}" rendered="#{treatmentController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{treatmentController.next}" value="#{bundle.Next} #{treatmentController.pagination.pageSize}" rendered="#{treatmentController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{treatmentController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_id}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.id}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_recorddate}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.recorddate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                            </h:outputText>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_recordprogram}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.recordprogram}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_recorduserid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.recorduserid}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_recordvalid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.recordvalid}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_customerid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.customerid}"/>
-                        </h:column>
+                    <p:dataTable value="#{treatmentController.items}" var="item"
+                                 resizableColumns="true" liveResize="false"
+                                 paginator="false"
+                                 rowKey="#{item.id}"
+                                 rows="#{treatmentController.pagination.pageSize}"
+                                 >
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListTreatmentTitle_treatmentdate}"/>
                             </f:facet>
                             <h:outputText value="#{item.treatmentdate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                                <f:convertDateTime pattern="yyyy/MM/dd" />
                             </h:outputText>
                         </h:column>
                         <h:column>
@@ -74,51 +42,13 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_examination}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.examination}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_treatment}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.treatment}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_treatmentresult}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.treatmentresult}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_attachedfile}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.attachedfile}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_attachedfilename}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.attachedfilename}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTreatmentTitle_attachedfiledata}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.attachedfiledata}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
                             </f:facet>
                             <h:commandLink action="#{treatmentController.prepareView}" value="#{bundle.ListTreatmentViewLink}"/>
                             <h:outputText value=" "/>
                             <h:commandLink action="#{treatmentController.prepareEdit}" value="#{bundle.ListTreatmentEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{treatmentController.destroy}" value="#{bundle.ListTreatmentDestroyLink}"/>
                         </h:column>
-                    </h:dataTable>
+                    </p:dataTable>
                 </h:panelGroup>
                 <br />
                 <h:commandLink action="#{treatmentController.prepareCreate}" value="#{bundle.ListTreatmentCreateLink}"/>
