--- a/src/main/webapp/treatment/View.xhtml
+++ b/src/main/webapp/treatment/View.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -14,24 +15,10 @@
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
             <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_id}"/>
-                    <h:outputText value="#{treatmentController.selected.id}" title="#{bundle.ViewTreatmentTitle_id}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_recorddate}"/>
-                    <h:outputText value="#{treatmentController.selected.recorddate}" title="#{bundle.ViewTreatmentTitle_recorddate}">
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:outputText>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_recordprogram}"/>
-                    <h:outputText value="#{treatmentController.selected.recordprogram}" title="#{bundle.ViewTreatmentTitle_recordprogram}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_recorduserid}"/>
-                    <h:outputText value="#{treatmentController.selected.recorduserid}" title="#{bundle.ViewTreatmentTitle_recorduserid}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_recordvalid}"/>
-                    <h:outputText value="#{treatmentController.selected.recordvalid}" title="#{bundle.ViewTreatmentTitle_recordvalid}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_customerid}"/>
-                    <h:outputText value="#{treatmentController.selected.customerid}" title="#{bundle.ViewTreatmentTitle_customerid}"/>
+                <p:panelGrid columns="2">
                     <h:outputText value="#{bundle.ViewTreatmentLabel_treatmentdate}"/>
                     <h:outputText value="#{treatmentController.selected.treatmentdate}" title="#{bundle.ViewTreatmentTitle_treatmentdate}">
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                        <f:convertDateTime pattern="yyyy/MM/dd" />
                     </h:outputText>
                     <h:outputText value="#{bundle.ViewTreatmentLabel_chiefcomplaint}"/>
                     <h:outputText value="#{treatmentController.selected.chiefcomplaint}" title="#{bundle.ViewTreatmentTitle_chiefcomplaint}"/>
@@ -41,25 +28,21 @@
                     <h:outputText value="#{treatmentController.selected.treatment}" title="#{bundle.ViewTreatmentTitle_treatment}"/>
                     <h:outputText value="#{bundle.ViewTreatmentLabel_treatmentresult}"/>
                     <h:outputText value="#{treatmentController.selected.treatmentresult}" title="#{bundle.ViewTreatmentTitle_treatmentresult}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_attachedfile}"/>
-                    <h:outputText value="#{treatmentController.selected.attachedfile}" title="#{bundle.ViewTreatmentTitle_attachedfile}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_attachedfilename}"/>
-                    <h:outputText value="#{treatmentController.selected.attachedfilename}" title="#{bundle.ViewTreatmentTitle_attachedfilename}"/>
-                    <h:outputText value="#{bundle.ViewTreatmentLabel_attachedfiledata}"/>
-                    <h:outputText value="#{treatmentController.selected.attachedfiledata}" title="#{bundle.ViewTreatmentTitle_attachedfiledata}"/>
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{treatmentController.destroyAndView}" value="#{bundle.ViewTreatmentDestroyLink}"/>
-                <br />
-                <br />
-                <h:link outcome="Edit" value="#{bundle.ViewTreatmentEditLink}"/>
-                <br />
-                <h:commandLink action="#{treatmentController.prepareCreate}" value="#{bundle.ViewTreatmentCreateLink}" />
-                <br />
-                <h:commandLink action="#{treatmentController.prepareList}" value="#{bundle.ViewTreatmentShowAllLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ViewTreatmentIndexLink}"/>
+                    <h:outputText value="#{bundle.ViewTreatmentLabel_attachedfile}" rendered="#{treatmentController.selected.attachedfile}"/>
+                    <img src="#{treatmentController.file}" rendered="#{treatmentController.selected.attachedfile}"/>
+                    </h:panelGrid>
+                    <br />
+                    <h:commandLink action="#{treatmentController.destroyAndView}" value="#{bundle.ViewTreatmentDestroyLink}"/>
+                    <br />
+                    <br />
+                    <h:link outcome="Edit" value="#{bundle.ViewTreatmentEditLink}"/>
+                    <br />
+                    <h:commandLink action="#{treatmentController.prepareCreate}" value="#{bundle.ViewTreatmentCreateLink}" />
+                    <br />
+                    <h:commandLink action="#{treatmentController.prepareList}" value="#{bundle.ViewTreatmentShowAllLink}"/>
+                    <br />
+                    <br />
+                    <h:link outcome="/index" value="#{bundle.ViewTreatmentIndexLink}"/>
 
             </h:form>
         </ui:define>
