--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -28,7 +28,7 @@
             <div style="clear:both;"></div>
             <div id="headermenu">
                 <ul>
-                    <li><h:link outcome="/index" value="トップページ" /></li>
+                    <li><h:link outcome="/index" value="#{bundle.Mトップ}" /></li>
                 </ul>
             </div>
         </header>
