--- a/src/main/webapp/customermaster/List.xhtml
+++ b/src/main/webapp/customermaster/List.xhtml
@@ -76,7 +76,7 @@
                                 <p:outputLabel value="#{bundle.L生年月日}"/>
                             </f:facet>
                             <p:outputLabel value="#{item.birthday}">
-                                <f:convertDateTime pattern="yyyy/MM/dd" />
+                                <f:convertDateTime pattern="yyyy/MM/dd" timeZone="JST" />
                             </p:outputLabel>
                         </p:column>
                         <p:column>
