--- a/src/main/webapp/customermaster/View.xhtml
+++ b/src/main/webapp/customermaster/View.xhtml
@@ -32,7 +32,7 @@
                     <p:outputLabel value="#{customermasterController.selected.phonenumber2}" title="#{bundle.ViewCustomermasterTitle_phonenumber2}"/>
                     <p:outputLabel value="#{bundle.L生年月日}"/>
                     <p:outputLabel value="#{customermasterController.selected.birthday}" title="#{bundle.ViewCustomermasterTitle_birthday}">
-                        <f:convertDateTime pattern="yyyy/MM/dd" />
+                        <f:convertDateTime pattern="yyyy/MM/dd" timeZone="JST" />
                     </p:outputLabel>
                 </h:panelGrid>
                 <br />
@@ -63,7 +63,7 @@
                                 <p:outputLabel value="#{bundle.L施術日}"/>
                             </f:facet>
                             <p:outputLabel value="#{item.treatmentdate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm" timeZone="JST" />
                             </p:outputLabel>
                         </p:column>
                         <p:column>
